--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- <script src="p5.sound.min.js"></script> -->
     <!-- <script src="p5.riso.js"></script> -->
     <!-- <script src="exp9.js"></script> -->
-    <script src="visualizer.js"></script>
+    <script src="visualizer2.js"></script>
     <!-- <script src="exp4.js"></script> -->
     <!-- <script src="exp6.js"></script> -->
     
